--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clean:data": "rimraf data",
     "clean:citeproc": "rimraf src/static/js/citeproc.js",
     "clean:all": "run-p  \"clean\" \"clean:data\" \"clean:citeproc\"",
-    "build": "run-p \"build:messages\" \"build:fetch-citeproc\" \"build:collect-locale\" \"build:styles-json\" && NODE_ENV=production run-p 'build:js -s' 'build:scss -s' 'build:html -s' 'build:static -s' && npm run build:postprocess",
+    "build": "run-p \"build:messages\" \"build:fetch-citeproc\" \"build:collect-locale\" \"build:styles-json\" && NODE_ENV=production run-p 'build:js -s' 'build:scss -s' 'build:tailwind -s' 'build:html -s' 'build:static -s' && npm run build:postprocess",
     "build:js": "mkdir -p build/static && NODE_ENV=production rollup -c",
     "build:scss": "for f in src/scss/*.scss; do sass --no-source-map $f build/static/`basename $f .scss`.css; done;",
     "build:html": "node scripts/build-html.cjs",
@@ -24,9 +24,9 @@
     "build:styles-json": "node scripts/build-styles-json.mjs",
     "build:fetch-citeproc": "node scripts/fetch-citeproc-js.mjs",
     "build:static": "mkdir -p build/static && rsync -vazL src/static/* build/static/",
-    "build:postprocess": "postcss build/static/bib.css --use autoprefixer --use cssnano --no-map -r",
+    "build:postprocess": "postcss \"build/static/*.css\" --config postcss.config.cjs --no-map -r",
     "build:prepare-for-tests": "run-p \"build:collect-locale\" \"build:styles-json\"",
-    "devel": "run-p 'devel:js -s' 'devel:scss -s' 'devel:html -s' 'devel:static -s'",
+    "devel": "run-p 'devel:js -s' 'devel:scss -s' 'devel:tailwind -s' 'devel:html -s' 'devel:static -s'",
     "devel:js": "rollup -c -w",
     "devel:scss": "for f in src/scss/*.scss; do sass --embed-source-map --watch $f build/static/`basename $f .scss`.css; done;",
     "devel:html": "nodemon -q -w src/html -w config --ext '.' --exec 'npm run build:html'",
@@ -45,7 +45,9 @@
     "locale-from-zotero": "node scripts/locale-from-zotero.mjs",
     "jest": "jest --silent",
     "jest:watch": "jest --watch",
-    "test": "run-s \"build:prepare-for-tests\" \"jest\""
+    "test": "run-s \"build:prepare-for-tests\" \"jest\"",
+    "build:tailwind": "tailwindcss -c tailwind.config.cjs -i src/styles/tailwind.css -o build/static/tailwind.css",
+    "devel:tailwind": "tailwindcss -c tailwind.config.cjs -i src/styles/tailwind.css -o build/static/tailwind.css --watch"
   },
   "dependencies": {
     "@babel/runtime": "^7.28.4",
@@ -55,20 +57,27 @@
     "@formatjs/intl-getcanonicallocales": "^2.5.5",
     "@formatjs/intl-locale": "^4.2.11",
     "@formatjs/intl-pluralrules": "^5.4.4",
+    "@radix-ui/react-slot": "^1.1.0",
     "balanced-match": "^3.0.1",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
     "core-js": "^3.45.1",
     "deep-equal": "^2.2.3",
     "es6-promise": "^4.2.8",
     "file-saver": "^2.0.5",
     "load-script": "^2.0.0",
+    "lucide-react": "^0.474.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-intl": "^7.1.11",
     "react-modal": "^3.16.3",
     "react-transition-group": "^4.4.5",
     "smooth-scroll": "^16.1.3",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.3.8",
     "use-debounce": "^10.0.6"
   },
   "devDependencies": {
@@ -85,12 +94,15 @@
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-replace": "^6.0.2",
     "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@rollup/plugin-virtual": "^3.0.2",
     "@rollup/plugin-wasm": "^6.2.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@welldone-software/why-did-you-render": "^10.0.1",
     "autoprefixer": "^10.4.21",
     "babel-jest": "^30.1.2",
@@ -131,6 +143,8 @@
     "stylelint-config-recommended-scss": "^16.0.0",
     "stylelint-config-standard": "^39.0.0",
     "stylelint-scss": "^6.12.1",
-    "terser": "^5.44.0"
+    "tailwindcss": "^3.4.14",
+    "terser": "^5.44.0",
+    "typescript": "^5.6.3"
   }
 }
