--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "devel:scss": "for f in src/scss/*.scss; do sass --embed-source-map --watch $f build/static/`basename $f .scss`.css; done;",
     "devel:html": "nodemon -q -w src/html -w config --ext '.' --exec 'npm run build:html'",
     "devel:static": "nodemon -q -w src/static --ext '.' --exec 'npm run build:static'",
+    "develop": "npm run start",
+    "dev": "npm run develop",
     "start": "mkdir -p build/static && run-p \"build:fetch-citeproc\" \"build:collect-locale\" \"build:styles-json\" && run-p \"devel -s {@}\" \"serve -s {@}\"",
     "stylelint": "stylelint \"src/scss/**/*.scss\" || true",
     "eslint": "eslint \"src/js/**/*.+(js|jsx)\" || true",
@@ -47,7 +49,9 @@
     "jest:watch": "jest --watch",
     "test": "run-s \"build:prepare-for-tests\" \"jest\"",
     "build:tailwind": "tailwindcss -c tailwind.config.cjs -i src/styles/tailwind.css -o build/static/tailwind.css",
-    "devel:tailwind": "tailwindcss -c tailwind.config.cjs -i src/styles/tailwind.css -o build/static/tailwind.css --watch"
+    "devel:tailwind": "tailwindcss -c tailwind.config.cjs -i src/styles/tailwind.css -o build/static/tailwind.css --watch",
+    "prettier": "prettier --check .",
+    "prettier:fix": "prettier --write ."
   },
   "dependencies": {
     "@babel/runtime": "^7.28.4",
@@ -114,7 +118,9 @@
     "cross-fetch": "^4.1.0",
     "cssnano": "^7.1.1",
     "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jest-dom": "^5.5.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "fs-extra": "^11.3.1",
@@ -131,6 +137,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
+    "prettier": "^3.6.2",
     "prop-types": "^15.8.1",
     "rimraf": "^6.0.1",
     "rollup": "^4.50.1",
