--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "@rollup/plugin-virtual": "^3.0.2",
     "@rollup/plugin-wasm": "^6.2.2",
+    "@tailwindcss/typography": "^0.5.18",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
