--- a/amplify.yml
+++ b/amplify.yml
@@ -3,9 +3,10 @@ frontend:
   phases:
     preBuild:
       commands:
-        - nvm install   # reads .nvmrc (lts/jod)
+        - nvm install
         - nvm use
         - node -v
+        - sudo dnf -y install rsync
         - npm ci
     build:
       commands:
