--- a/amplify.yml
+++ b/amplify.yml
@@ -7,6 +7,7 @@ frontend:
         - nvm use
         - node -v
         - sudo dnf -y install rsync
+        - git submodule update --init --recursive
         - npm ci
     build:
       commands:
