--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "browserslist": "firefox >= 68, chrome >=67, edge >= 15, safari >= 10, last 2 versions, not dead, not ie 11, not ie 10",
   "scripts": {
     "serve": "node scripts/server.cjs",
-    "prebuild": "npm run clean -s && mkdir -p build/static/",
+    "prebuild": "npm run bootstrap && npm run clean -s && mkdir -p build/static/",
     "clean": "rimraf build lang",
     "clean:data": "rimraf data",
     "clean:citeproc": "rimraf src/static/js/citeproc.js",
@@ -49,9 +49,11 @@
     "jest:watch": "jest --watch",
     "test": "run-s \"build:prepare-for-tests\" \"jest\"",
     "build:tailwind": "tailwindcss -c tailwind.config.cjs -i src/styles/tailwind.css -o build/static/tailwind.css",
+    "bootstrap": "git submodule sync --recursive && git submodule update --init --recursive --depth 1",
     "devel:tailwind": "tailwindcss -c tailwind.config.cjs -i src/styles/tailwind.css -o build/static/tailwind.css --watch",
     "prettier": "prettier --check .",
-    "prettier:fix": "prettier --write ."
+    "prettier:fix": "prettier --write .",
+    "preinstall": "npm run bootstrap"
   },
   "dependencies": {
     "@babel/runtime": "^7.28.4",
