--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "scripts": {
     "serve": "node scripts/server.cjs",
     "prebuild": "npm run bootstrap && npm run clean -s && mkdir -p build/static/",
-    "clean": "rimraf build lang",
-    "clean:data": "rimraf data",
-    "clean:citeproc": "rimraf src/static/js/citeproc.js",
+    "clean": "rm -rf build lang",
+    "clean:data": "rm -rf data",
+    "clean:citeproc": "rm -rf src/static/js/citeproc.js",
     "clean:all": "run-p  \"clean\" \"clean:data\" \"clean:citeproc\"",
     "build": "run-p \"build:messages\" \"build:fetch-citeproc\" \"build:collect-locale\" \"build:styles-json\" && NODE_ENV=production run-p 'build:js -s' 'build:scss -s' 'build:tailwind -s' 'build:html -s' 'build:static -s' && npm run build:postprocess",
     "build:js": "mkdir -p build/static && NODE_ENV=production rollup -c",
@@ -23,7 +23,7 @@
     "build:collect-locale": "node scripts/collect-locale.mjs",
     "build:styles-json": "node scripts/build-styles-json.mjs",
     "build:fetch-citeproc": "node scripts/fetch-citeproc-js.mjs",
-    "build:static": "mkdir -p build/static && rsync -vazL src/static/* build/static/",
+    "build:static": "mkdir -p build/static && cp -a src/static/. build/static/",
     "build:postprocess": "postcss \"build/static/*.css\" --config postcss.config.cjs --no-map -r",
     "build:prepare-for-tests": "run-p \"build:collect-locale\" \"build:styles-json\"",
     "devel": "run-p 'devel:js -s' 'devel:scss -s' 'devel:tailwind -s' 'devel:html -s' 'devel:static -s'",
@@ -148,7 +148,6 @@
     "postcss-cli": "^11.0.1",
     "prettier": "^3.6.2",
     "prop-types": "^15.8.1",
-    "rimraf": "^6.0.1",
     "rollup": "^4.50.1",
     "rollup-plugin-filesize": "^10.0.0",
     "rollup-plugin-sizes": "^1.1.0",
