--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clean:data": "rimraf data",
     "clean:citeproc": "rimraf src/static/js/citeproc.js",
     "clean:all": "run-p  \"clean\" \"clean:data\" \"clean:citeproc\"",
-    "build": "run-p \"build:messages\" \"build:fetch-citeproc\" \"build:collect-locale\" \"build:styles-json\" && NODE_ENV=production run-p 'build:js -s' 'build:scss -s' 'build:tailwind -s' 'build:html -s' 'build:static -s' && npm run build:postprocess",
+    "build": "run-p \"build:messages\" \"build:fetch-citeproc\" \"build:collect-locale\" \"build:styles-json\" && NODE_ENV=production run-p 'build:js -s' 'build:scss -s' 'build:tailwind -s' 'build:html -s' 'build:static -s' && npm run build:postprocess && npm run build:root-assets",
     "build:js": "mkdir -p build/static && NODE_ENV=production rollup -c",
     "build:scss": "for f in src/scss/*.scss; do sass --no-source-map $f build/static/`basename $f .scss`.css; done;",
     "build:html": "node scripts/build-html.cjs",
@@ -25,6 +25,7 @@
     "build:fetch-citeproc": "node scripts/fetch-citeproc-js.mjs",
     "build:static": "mkdir -p build/static && rsync -vazL src/static/* build/static/",
     "build:postprocess": "postcss \"build/static/*.css\" --config postcss.config.cjs --no-map -r",
+    "build:root-assets": "node scripts/copy-root-assets.mjs",
     "build:prepare-for-tests": "run-p \"build:collect-locale\" \"build:styles-json\"",
     "devel": "run-p 'devel:js -s' 'devel:scss -s' 'devel:tailwind -s' 'devel:html -s' 'devel:static -s'",
     "devel:js": "rollup -c -w",
