--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.1.0",
     "balanced-match": "^3.0.1",
     "class-variance-authority": "^0.7.1",
