--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "deep-equal": "^2.2.3",
     "es6-promise": "^4.2.8",
     "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "load-script": "^2.0.0",
     "lucide-react": "^0.474.0",
     "react": "^19.1.1",
